# dikki

./: .gitignore  Dockerfile  README.md  dikki.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: build.yml
dikkilib/: .image.py.swp  __init__.py  attributable.py  container.py  container_walker.py  containers.py  dikki.py  image.py  image_walker.py  images.py  raw_docker.py  raw_docker_mock.py  test.py  time_mock.py  tools.py  walker_base.py  walker_item.py
doc/: graph1  graph2  graph4
tests/: containers-table-all-format.output  containers-table-all.output  containers-table.output  create-graphs.sh  help-help.output  images-graph-all.output  images-table.output  images-tree-compact.output  images-treetable-format.output  table.output  tree-all.output  tree-compact-ascii.output  tree.output  treetable.output
